all endpoints (I think)